fix for dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,6 @@ code {
 
 @media (prefers-color-scheme: dark) {
   .wmde-markdown {
-    background-color: inherit;
+    background-color: inherit !important;
   }
 }
